--- a/base/package.json
+++ b/base/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.5.2",
+    "js-cookie": "^2.2.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
